{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 66,
  "lineage": "2fba6f7f-9d04-c1c4-1dde-7d9bfb536c2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847750225273:internet-gateway/igw-0936322ed440bc9cb",
            "id": "igw-0936322ed440bc9cb",
            "owner_id": "847750225273",
            "tags": {
              "Course": "ISY1101",
              "Name": "devopsvg-igw",
              "Project": "devopsvg"
            },
            "tags_all": {
              "Course": "ISY1101",
              "Name": "devopsvg-igw",
              "Project": "devopsvg"
            },
            "vpc_id": "vpc-009636059a77fe98a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847750225273:route-table/rtb-09d117259086a0b62",
            "id": "rtb-09d117259086a0b62",
            "owner_id": "847750225273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0936322ed440bc9cb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Course": "ISY1101",
              "Name": "devopsvg-public-rt",
              "Project": "devopsvg"
            },
            "tags_all": {
              "Course": "ISY1101",
              "Name": "devopsvg-public-rt",
              "Project": "devopsvg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009636059a77fe98a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4199d3a348d3ee1",
            "route_table_id": "rtb-09d117259086a0b62",
            "subnet_id": "subnet-09b89cee798f34f80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065bd0141c0550a84",
            "route_table_id": "rtb-09d117259086a0b62",
            "subnet_id": "subnet-08cbb4e1557ab68ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847750225273:security-group/sg-0820c44580232e922",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0820c44580232e922",
            "ingress": [],
            "name": "devopsvg-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "847750225273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Course": "ISY1101",
              "Project": "devopsvg"
            },
            "tags_all": {
              "Course": "ISY1101",
              "Project": "devopsvg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009636059a77fe98a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847750225273:subnet/subnet-09b89cee798f34f80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b89cee798f34f80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847750225273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Course": "ISY1101",
              "Name": "devopsvg-public-1",
              "Project": "devopsvg",
              "kubernetes.io/cluster/devopsvg-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Course": "ISY1101",
              "Name": "devopsvg-public-1",
              "Project": "devopsvg",
              "kubernetes.io/cluster/devopsvg-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-009636059a77fe98a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847750225273:subnet/subnet-08cbb4e1557ab68ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cbb4e1557ab68ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "847750225273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Course": "ISY1101",
              "Name": "devopsvg-public-2",
              "Project": "devopsvg",
              "kubernetes.io/cluster/devopsvg-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Course": "ISY1101",
              "Name": "devopsvg-public-2",
              "Project": "devopsvg",
              "kubernetes.io/cluster/devopsvg-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-009636059a77fe98a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:847750225273:vpc/vpc-009636059a77fe98a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-08a5c256a5bd0bf6b",
            "default_route_table_id": "rtb-0efc5ab9f02ddb52d",
            "default_security_group_id": "sg-02a98199366b77b67",
            "dhcp_options_id": "dopt-00bfe956b019cd6ef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009636059a77fe98a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0efc5ab9f02ddb52d",
            "owner_id": "847750225273",
            "tags": {
              "Course": "ISY1101",
              "Name": "devopsvg-vpc",
              "Project": "devopsvg"
            },
            "tags_all": {
              "Course": "ISY1101",
              "Name": "devopsvg-vpc",
              "Project": "devopsvg"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}